--- a/catalog.html
+++ b/catalog.html
@@ -17,42 +17,42 @@
 <body class="page-body inner-page">
   <header class="main-header catalog-header">
     <div class="main-header-container container">
-    <a href="./index.html" class="main-header-logo">
-      <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Nerds»">
-    </a>
-    <!-- Шапка сайта -->
-    <nav class="main-navigation">
-      <div class="main-header-bar">
-       <div class="main-navigation-wrapper"></div>
-         <ul class="site-navigation">
-          <li class="site-navigation-item">
-            <a href="#">Студия</a>
-          </li>
-          <li class="site-navigation-item">
-            <a href="#">Клиенты</a>
-          </li>
-          <li class="site-navigation-item">
-            <a>Магазин</a>
-          </li>
-          <li class="site-navigation-item">
-            <a href="#">Контакты</a>
-          </li>
-          <li  class="site-navigation-item">
-            <a href="#">Корзина</a>
-          </li>
-        </ul>
-      </div>
+      <a href="./index.html" class="main-header-logo">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии «Nerds»">
+      </a>
+      <!-- Шапка сайта -->
+      <nav class="main-navigation">
+        <div class="main-header-bar">
+          <div class="main-navigation-wrapper"></div>
+          <ul class="site-navigation">
+            <li class="site-navigation-item">
+              <a href="#">Студия</a>
+            </li>
+            <li class="site-navigation-item">
+              <a href="#">Клиенты</a>
+            </li>
+            <li class="site-navigation-item">
+              <a>Магазин</a>
+            </li>
+            <li class="site-navigation-item">
+              <a href="#">Контакты</a>
+            </li>
+            <li class="site-navigation-item">
+              <a href="#">Корзина</a>
+            </li>
+          </ul>
+        </div>
     </div>
     </nav>
-  </div>
-  <h1 class="main-title container ">Магазин готовых шаблонов</h1>
+    </div>
+    <h1 class="main-title container ">Магазин готовых шаблонов</h1>
   </header>
 
   <main class="page-catalog container">
     <section class="filter">
       <h2 class="visually-hidden">Фильтр товаров</h2>
       <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
+        <fieldset class="filter-price">
           <legend class="filter-title">Стоимость:</legend>
           <input class="price-range" type="range" name="price" min="0" max="15000">
           <label class="filter-form-text" for="min">от<input class="filter-price-text" name="min-price" id="min"
@@ -61,8 +61,8 @@
               type="text" value="15000"></label>
         </fieldset>
 
-        <fieldset>
-          <legend class="filter-title grid-title">Cетка:</legend>
+        <fieldset class="filter-grid">
+          <legend class="filter-title">Cетка:</legend>
           <ul class="radio-list">
             <li class="radio-item">
               <input class="select-button" type="radio" name="grid" value="adaptive" id="filter-adaptive" checked>
@@ -78,8 +78,9 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset>
-          <legend class="filter-title excellence-title">Особенности</legend>
+
+        <fieldset class="filter-excellence">
+          <legend class="filter-title">Особенности</legend>
           <ul class="checkbox-list">
             <li class="checkbox-item">
               <input class="select-button" type="checkbox" name="slider" id="filter-slider" checked>
@@ -103,73 +104,84 @@
             </li>
           </ul>
         </fieldset>
-        <button type="submit" class="button filter-show-button">Показать</button>
+        <button type="submit" class="button filter-button">Показать</button>
       </form>
     </section>
 
     <section>
-      <h2 class="visually-hidden">Список шаблонов</h2>
       <div class="sort">
         <h3 class="filter-title sort-title">Сортировать:</h3>
         <ul class="sort-list">
-          <li><a href="#" class="sort-type type-price">по цене</a></li>
-          <li><a href="#" class="sort-type type-type">по типу</a></li>
-          <li><a href="#" class="sort-type type-name">по названию</a></li>
+          <li><a href="#" class="sort-type">по цене</a></li>
+          <li><a href="#" class="sort-type">по типу</a></li>
+          <li><a href="#" class="sort-type">по названию</a></li>
         </ul>
 
-        <ul class="sort-list">
+        <ul class="sort-buttons">
           <li><a href="#"><span class="visually-hidden">по убыванию</span></a></li>
           <li><a href="#"><span class="visually-hidden">по возрастанию</span></a></li>
         </ul>
       </div>
 
-    <div class="example">
-      <ul class="example-list">
-        <li class="example-item">
-          <h3 class="example-link"><a href="#">Sedona</a></h3>
-          <p class="example-text">Информационный сайт<br>
-            для туристов</p>
-          <a href="#" class="button button-primary example-button"> 9 900 ₽ </a>
-          <img src="img/img-sedona.jpg" width="358" height="578" alt="Пример сайта Sedona">
-        </li>
-        <li class="example-item">
-          <h3 class="example-link"><a href="#">Pink app</a></h3>
-          <p class="example-text">Продуктовый лендинг<br>
-            приложения для iOS и Android</p>
-          <a href="#" class="button button-primary example-button">9 900 ₽</a>
-          <img src="img/img-pink.jpg" width="358" height="578" alt="Пример приложения Pink">
-        </li>
-        <li class="example-item">
-          <h3 class="example-link"><a href="#">Barbershop</a></h3>
-          <p class="example-text">Сайт салона красоты.<br>
-            Для мужчин, да.</p>
-          <a href="#" class="button button-primary example-button">9 900 ₽</a>
-          <img src="img/img-barbershop.jpg" width="358" height="578" alt="Пример сайта для барбершопа">
-        </li>
-        <li class="example-item">
-          <h3 class="example-link"><a href="#"> Mishka</a></h3>
-          <p class="example-text">Интернет-магазин<br>
-            вязаных игрушек</p>
-          <a href="#" class="button button-primary example-button">9 900 ₽</a>
-          <img src="img/img-mishka.png" width="358" height="578" alt="Пример интернет-магазина для магазина Мишка">
-        </li>
-        <li class="example-item">
-          <h3 class="example-link"><a href="#">A plus</a></h3>
-          <p class="example-text">Лендинг курсов повышения
-            квалификации</p>
-          <a href="#" class="button button-primary example-button">9 900 ₽</a>
-          <img src="img/img-aplus.jpg" width="358" height="578"
-            alt="Пример лендинга курсов повышения квалификации A Plus">
-        </li>
-        <li class="example-item">
-          <h3 class="example-link"><a href="#">Кваст</a></h3>
-          <p class="example-text">Промо-сайт производителя
-            крафтового кваса</p>
-          <a href="#" class="button button-primary example-button">9 900 ₽</a>
-          <img src="img/img-kvast.jpg" width="358" height="578" alt="Пример промо-сайта крафтового кваса - КВАСТ">
-        </li>
-      </ul>
-    </div>
+      <div class="example">
+        <ul class="example-list">
+          <li class="example-item">
+            <div class="example-cover">
+              <h3 class="example-title"><a href="#">Sedona</a></h3>
+              <p class="example-text">Информационный сайт<br>
+                для туристов</p>
+              <a href="#" class="button button-primary example-button"> 9 900 ₽ </a>
+            </div>
+            <img class="example-img" src="img/img-sedona.jpg" width="358" height="578" alt="Пример сайта Sedona">
+          </li>
+          <li class="example-item">
+            <div class="example-cover">
+              <h3 class="example-title"><a href="#">Pink app</a></h3>
+              <p class="example-text">Продуктовый лендинг<br>
+                приложения для iOS и Android</p>
+              <a href="#" class="button button-primary example-button">9 900 ₽</a>
+            </div>
+            <img class="example-img" src="img/img-pink.jpg" width="358" height="578" alt="Пример приложения Pink">
+          </li>
+          <li class="example-item">
+            <div class="example-cover">
+              <h3 class="example-title"><a href="#">Barbershop</a></h3>
+              <p class="example-text">Сайт салона красоты.<br>
+                Для мужчин, да.</p>
+              <a href="#" class="button button-primary example-button">9 900 ₽</a>
+            </div>
+            <img class="example-img" src="img/img-barbershop.jpg" width="358" height="578" alt="Пример сайта для барбершопа">
+          </li>
+          <li class="example-item">
+            <div class="example-cover">
+              <h3 class="example-title"><a href="#"> Mishka</a></h3>
+              <p class="example-text">Интернет-магазин<br>
+                вязаных игрушек</p>
+              <a href="#" class="button button-primary example-button">9 900 ₽</a>
+            </div>
+            <img class="example-img" src="img/img-mishka.png" width="358" height="578" alt="Пример интернет-магазина для магазина Мишка">
+          </li>
+          <li class="example-item">
+            <div class="example-cover">
+              <h3 class="example-title"><a href="#">A plus</a></h3>
+              <p class="example-text">Лендинг курсов повышения
+                квалификации</p>
+              <a href="#" class="button button-primary example-button">9 900 ₽</a>
+            </div>
+            <img class="example-img" src="img/img-aplus.jpg" width="358" height="578"
+              alt="Пример лендинга курсов повышения квалификации A Plus">
+          </li>
+          <li class="example-item">
+            <div class="example-cover">
+              <h3 class="example-title"><a href="#">Кваст</a></h3>
+              <p class="example-text">Промо-сайт производителя
+                крафтового кваса</p>
+              <a href="#" class="button button-primary example-button">9 900 ₽</a>
+            </div>
+            <img class="example-img" src="img/img-kvast.jpg" width="358" height="578" alt="Пример промо-сайта крафтового кваса - КВАСТ">
+          </li>
+        </ul>
+      </div>
       <ul class="pagination-list">
         <li class="pagination-item"><a href="#" class="button pagination-link" disabled>1</a></li>
         <li class="pagination-item"><a href="#" class="button pagination-link">2</a></li>
@@ -178,23 +190,23 @@
       </ul>
     </section>
   </main>
-  
+
   <footer class="main-footer">
     <section class="contacts">
       <div class="container">
-        <h2 class="visually-hidden">Контакты</h2>
-        <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
-        <p class="contacts-text">191186, Санкт-Петербург,<br>
-          ул. Б. Конюшенная, д. 19/8</p>
-        <div class="contacts-link">
-          <a class="contacts-link" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+        <div class="contacts-content">
+          <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
+          <p class="contacts-text">191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8</p>
+          <div class="contacts-link">
+            <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+          </div>
+          <a href="#" class="button button-primary contacts-button">напишите нам</a>
         </div>
-        <a href="#" type="button" class="button button-primary contacts-button">напишите нам</a>
       </div>
     </section>
 
     <div class="footer-info container">
-      <h2 class="visually-hidden">Мы в соцсетях</h2>
       <ul class="social-list">
         <li class="social-item">
           <a class="social-button" href="#">
@@ -215,7 +227,7 @@
         <li class="social-item">
           <a class="social-button" href="#">
             <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" text-anchor='middle'
+              <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M3 0H18C19.65 0 21 1.34998 21 2.99997V17.9998C21 19.6498 19.65 20.9998 18 20.9998H3C1.35 20.9998 0 19.6498 0 17.9998V2.99997C0 1.34998 1.35 0 3 0ZM14 10.5001C14 8.57006 12.43 7 10.5 7C8.57 7 7 8.57006 7 10.5001C7 12.4302 8.57 14.0002 10.5 14.0002C12.43 14.0002 14 12.4302 14 10.5001ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91016 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9987 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V2.99976H14V7Z"
                 fill="white" />
             </svg>
