--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
             <a href="#">Корзина</a>
           </li>
         </ul>
+     </nav>
     </div>
-    </nav>
-    </div>
-
   </header>
 
   <main class="main">
@@ -53,7 +51,8 @@
         <ul class="features-list">
           <li class="feature-item-current">
             <h3 class="feature-title">Долго, дорого скрупулезно.</h3>
-            <p class="feature-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+            <p class="feature-text">Математически выверенный дизайн<br>
+              для вашего сайта или мобильного приложения.</p>
             <a href="#" class="button button-primary">Узнать больше</a>
           </li>
           <li class="feature-item">
@@ -109,7 +108,6 @@
     </section>
 
     <section class="about container">
-      <h2 class="visually-hidden">О нас</h2>
       <div class="about-info">
         <p class="about-lead">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p class="about-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
@@ -173,19 +171,19 @@
   <footer class="main-footer">
     <section class="contacts">
       <div class="container">
-        <h2 class="visually-hidden">Контакты</h2>
+        <div class="contacts-content">
         <h3 class="contacts-title">NЁRDS DESIGN STUDIO</h3>
         <p class="contacts-text">191186, Санкт-Петербург,<br>
           ул. Б. Конюшенная, д. 19/8</p>
         <div class="contacts-link">
-          <a class="contacts-link" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+          <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
         </div>
-        <a href="#" type="button" class="button button-primary contacts-button">напишите нам</a>
+        <a href="#" class="button button-primary contacts-button">напишите нам</a>
+       </div>
       </div>
     </section>
 
     <div class="footer-info container">
-      <h2 class="visually-hidden">Мы в соцсетях</h2>
       <ul class="social-list">
         <li class="social-item">
           <a class="social-button" href="#">
@@ -206,7 +204,7 @@
         <li class="social-item">
           <a class="social-button" href="#">
             <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" text-anchor='middle'
+              <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M3 0H18C19.65 0 21 1.34998 21 2.99997V17.9998C21 19.6498 19.65 20.9998 18 20.9998H3C1.35 20.9998 0 19.6498 0 17.9998V2.99997C0 1.34998 1.35 0 3 0ZM14 10.5001C14 8.57006 12.43 7 10.5 7C8.57 7 7 8.57006 7 10.5001C7 12.4302 8.57 14.0002 10.5 14.0002C12.43 14.0002 14 12.4302 14 10.5001ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91016 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9987 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V2.99976H14V7Z"
                 fill="white" />
             </svg>
