--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,7 @@
           <li class="site-navigation-item">
             <a href="#">Контакты</a>
           </li>
-          <li class="site-navigation-item">
+          <li class="site-navigation-item basket-link">
             <a href="#">Корзина</a>
           </li>
         </ul>
@@ -49,26 +49,38 @@
       <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
         <fieldset class="filter-price">
           <legend class="filter-title">Стоимость:</legend>
-          <input class="price-range" type="range" name="price" min="0" max="15000">
-          <label class="filter-form-text" for="min">от<input class="filter-price-text" name="min-price" id="min"
-              type="text" value="0"></label>
-          <label class="filter-form-text" for="max">до<input class="filter-price-text" name="max-price" id="max"
-              type="text" value="15000"></label>
-        </fieldset>
-
+          <div class="range-filter">
+            <div class="range-controls">
+              <div class="scale">
+                <div class="bar"></div>
+            </div>
+            <div class="toggle toggle-min" tabindex="0"></div>
+            <div class="toggle toggle-max" tabindex="0"></div>
+          </div>
+          <div class="price-controls">
+            <label class="min-price">
+              от <input type="number" name="min-price" value="0">
+            </label>
+            <label class="max-price">
+              до <input type="number" name="max-price" value="15000">
+            </label>
+          </div>
+        </div>
+    </fieldset>
+    
         <fieldset class="filter-grid">
           <legend class="filter-title">Cетка:</legend>
           <ul class="radio-list">
             <li class="radio-item">
-              <input class="select-button" type="radio" name="grid" value="adaptive" id="filter-adaptive" checked>
+              <input class="filter-input-radio visually-hidden" type="radio" name="grid" value="adaptive" id="filter-adaptive" checked>
               <label for="filter-adaptive" class="filter-name">Адаптивная</label>
             </li>
             <li class="radio-item">
-              <input class="select-button" type="radio" name="grid" value="fixed" id="filter-fixed">
+              <input class="filter-input-radio visually-hidden" type="radio" name="grid" value="fixed" id="filter-fixed">
               <label for="filter-fixed" class="filter-name">Фиксированная</label>
             </li>
             <li class="radio-item">
-              <input class="select-button" type="radio" name="grid" value="rubber" id="filter-rubber">
+              <input class="filter-input-radio visually-hidden" type="radio" name="grid" value="rubber" id="filter-rubber">
               <label for="filter-rubber" class="filter-name">Резиновая</label>
             </li>
           </ul>
@@ -78,23 +90,23 @@
           <legend class="filter-title">Особенности</legend>
           <ul class="checkbox-list">
             <li class="checkbox-item">
-              <input class="select-button" type="checkbox" name="slider" id="filter-slider" checked>
-              <label for="filter-slider" class="filter-name">Слайдер</label>
+              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="slider" id="filter-slider" checked>
+              <label for="filter-slider" cfilter-input-checkboxass="filter-name">Слайдер</label>
             </li>
             <li class="checkbox-item">
-              <input class="select-button" type="checkbox" name="advantages" id="filter-advantages">
+              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="advantages" id="filter-advantages">
               <label for="filter-advantages" class="filter-name">Блок преимуществ</label>
             </li>
             <li class="checkbox-item">
-              <input class="select-button" type="checkbox" name="news" id="filter-news" checked>
+              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="news" id="filter-news" checked>
               <label for="filter-news" class="filter-name">Новости</label>
             </li>
             <li class="checkbox-item">
-              <input class="select-button" type="checkbox" name="gallery" id="filter-gallery">
+              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="gallery" id="filter-gallery">
               <label for="filter-gallery" class="filter-name">Галерея</label>
             </li>
             <li class="checkbox-item">
-              <input class="select-button" type="checkbox" name="basket" id="filter-basket" checked>
+              <input class="filter-input-checkbox visually-hidden" type="checkbox" name="basket" id="filter-basket" checked>
               <label for="filter-basket" class="filter-name">Корзина</label>
             </li>
           </ul>
@@ -112,9 +124,27 @@
           <li><a href="#" class="sort-type">по названию</a></li>
         </ul>
 
-        <ul class="sort-buttons">
-          <li><a href="#"><span class="visually-hidden">по убыванию</span></a></li>
-          <li><a href="#"><span class="visually-hidden">по возрастанию</span></a></li>
+        <ul class="sort-min-max">
+          <li>
+            <a href="#" class="sort-button">
+            <span class="visually-hidden">по убыванию</span>
+            <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+             <g opacity="0.2">
+              <path d="M5.5 10L0 0H11" fill="#A6A6A6"/>
+             </g>
+            </svg>
+          </a>
+        </li>
+          <li>
+            <a href="#" class="sort-button">
+              <span class="visually-hidden">по возрастанию</span>
+              <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g opacity="0.2">
+                <path d="M5.5 0L0 10H11L5.5 0Z" fill="#A6A6A6"/>
+                </g>
+              </svg>
+            </a>
+          </li>
         </ul>
       </div>
 
